# image-compression-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  clean.sh  rama_cuda_patch.cu  rama_cuda_patch.h  readme.md  setup.sh
.cache/clangd/index/: huffman.cpp.734C14EE930E648B.idx  huffman.hpp.2D4F890C3895E0FA.idx  main.cpp.B8FA074EDDDC9592.idx
.github/workflows/: build.yml
include/: canny_edge.h  canny_edge.hpp  compute_rewards.cuh  compute_rewards.hpp  configuration.h  ema_baseline.hpp  gaussian_policy.hpp  graph_based_edge.h  graph_based_edge.hpp  huffman.hpp  image_loader.h  image_loader.hpp  image_slicer.h  image_writer.h  metadata.h  pattern_generator.h  png_size_estimator.cuh  rama_wrapper.cuh  rama_wrapper.h  random_partition.hpp  segment_extract.hpp  segment_stats.cuh  slic_edge.h  slic_edge.hpp  slice_edge.hpp  watershed_edge.h  watershed_edge.hpp
include/fcn/: DoubleConv.h  Down.h  EdgeDataset.h  EdgeDataset2.h  EdgeDatset.h  EdgeUNet.h  Up.h
src/: canny_edge.cpp  compress.cpp  compute_rewards.cu  graph_based_edge.cpp  huffman.cpp  image_converter.cpp  image_loader.cpp  image_slicer.cpp  image_writer.cpp  main.cpp  metadata.cpp  pattern_generator.cpp  png_size_estimator.cu  rama_wrapper.cpp  rama_wrapper.cu  reassemble.cpp  segment_stats.cu  slic_edge.cpp  watershed_edge.cpp
src/fcn/: main.cpp  pretraining.cpp  training.cpp
